--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "CircularStd-Private";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/public/fonts/circular/CircularStd-Book.otf");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "CircularStd-Private";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/public/fonts/circular/CircularStd-Medium.otf");
+}
+
+@font-face {
+  font-family: "CircularStd-Private";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/public/fonts/circular/CircularStd-Bold.otf");
+}
+
+@font-face {
+  font-family: "CircularStd-Private";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/public/fonts/circular/CircularStd-Black.otf");
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+body {
+  width: 100%;
+  max-width: 2560px;
+  margin: auto;
+  overflow-x: hidden;
+}
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(162, 162, 167);
+  border-radius: 100px;
 }
