--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-  transition: all ease 0.3s;
 }
 
 body {
@@ -63,3 +62,12 @@ body {
   background-color: rgb(162, 162, 167);
   border-radius: 100px;
 }
+
+  .react-slideshow-container+ul.indicators .each-slideshow-indicator:before{
+    background: white !important;
+  }
+
+  .highlight-image{
+    box-shadow: 10px 10px 20px #00000020;
+    border-radius: 15px ;
+  }
