add sal animations

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,21 @@ body {
   transition: all ease 0.5s;
 }
 
+[data-sal|="fade-up"] {
+  opacity: 0 !important;
+  ;
+  transform: translateY(80px) !important;
+  transition: opacity 0.9s ease, transform 0.9s ease !important;
+  ;
+}
+
+[data-sal|="fade-up"].sal-animate {
+  opacity: 1 !important;
+  ;
+  transform: translateY(0) !important;
+  ;
+}
+
 
 /* Scrollbar */
 
