--- a/src/index.css
+++ b/src/index.css
@@ -54,19 +54,14 @@ body {
 
 [data-sal|="fade-up"] {
   opacity: 0 !important;
-  ;
   transform: translateY(80px) !important;
   transition: opacity 0.9s ease, transform 0.9s ease !important;
-  ;
 }
 
 [data-sal|="fade-up"].sal-animate {
   opacity: 1 !important;
-  ;
   transform: translateY(0) !important;
-  ;
 }
-
 
 /* Scrollbar */
 
@@ -83,11 +78,13 @@ body {
   border-radius: 100px;
 }
 
-  .react-slideshow-container+ul.indicators .each-slideshow-indicator:before{
-    background: white !important;
+@keyframes pop {
+  from {
+    transform: scale(0.5);
+    opacity: 0;
   }
-
-  .highlight-image{
-    box-shadow: 10px 10px 20px #00000020;
-    border-radius: 15px ;
+  to {
+    transform: scale(1);
+    opacity: 1;
   }
+}
